# plonky2-ecdsa-with-sha256

./: .gitmodules  CHANGELOG.md  Cargo.toml  build.rs
docs/: perf.1gpu.md  perf.1xH100.md  perf.4xH100.md  perf.cpu.mac.md  perf.md  todo.md
src/: main.rs
src/u32/gates/: add_many_u32.rs  arithmetic_u32.rs  comparison.rs  interleave_u32.rs  range_check_u32.rs  subtraction_u32.rs  uninterleave_to_b32.rs  uninterleave_to_u32.rs
