[package]
name = "plonky2_ecdsa"
description = "ECDSA gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default=["parallel"]
parallel = ["plonky2_maybe_rayon/parallel", "plonky2/parallel"]
cuda=["plonky2_field/cuda", "plonky2/cuda", "cryptography_cuda"]
timing=["plonky2/timing"]

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false }
plonky2_maybe_rayon = { version = "0.1.1", default-features = false }
num = { version = "0.4.0", default-features = false }
# plonky2 = { version = "0.1.4", default-features = true }
plonky2 = { path = "plonky2/plonky2"}
plonky2_field = { path = "plonky2/field"}
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "2.2.0", features = ["hex"] }
hex = { version = "0.4.3" }
sha2 = { version = "0.10.6" }
env_logger = "0.9.1"
cryptography_cuda={path="./plonky2/cryptography_cuda", optional=true}

[dev-dependencies]
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
sha2 = { version = "0.10.6" }
sha3 = { version = "0.10.6" }
serde_json = "1.0"

[build-dependencies]
plonky2_gen = { path = "plonky2/gen"}

